--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           <a href="mailto:ganeshparavada7@gmail.com">Email</a>
         </div>
       </div>
-      <img class="avatar" src="Gani.png" alt="Your photo (replace placeholder)" />
+      <img class="avatar" src="assets/Gani.png" alt="Your photo (replace placeholder)" />
     </section>
 
     <section id="projects">
@@ -356,5 +356,6 @@
     function escapeHtml(s) { return (s || "").replace(/[&<>"']/g, m => ({ '&': '&amp;', '<': '&lt;', '>': '&gt;', '"': '&quot;', "'": '&#39;' }[m])); }
   </script>
 </body>
+
 
 </html>
